# mesh-loader

./: Readme.md  headersAssembler.py  meson.build  srcAssembler.py
include/: MeshBase.h  MeshIndices.h  MeshNorm.h  MeshPos.h  MeshUV0.h
include/mesh-loader/: MeshBase.h  MeshIndices.h  MeshNorm.h  MeshPos.h  MeshUV0.h
src/: MeshBase.cpp  MeshIndices.cpp  MeshNorm.cpp  MeshPos.cpp  MeshUV0.cpp
